crates/biome_cli/tests/snapshots/main_cases_handle_astro_files/lint_stdin_apply_successfully.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
# Input messages

```block
---
import {a as a} from 'mod';
---
<div></div>
```

# Emitted Messages

```block
---
import {a} from 'mod';
---
<div></div>
```
