crates/biome_cli/tests/snapshots/main_cases_handle_astro_files/lint_stdin_write_successfully.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --write --stdin-file-path file.astro
```

# Input messages

```block
---
import {a as a} from 'mod';
export { a };
---
<div></div>
```

# Emitted Messages

```block
---
import {a} from 'mod';
export { a };
---
<div></div>
```
