crates/biome_cli/tests/snapshots/main_cases_handle_astro_files/lint_stdin_write_unsafe_successfully.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --write --unsafe --stdin-file-path file.astro
```

# Input messages

```block
---
debugger;
---
<div></div>
```

# Emitted Messages

```block
---

---
<div></div>
```
