crates/biome_cli/tests/snapshots/main_cases_handle_astro_files/no_undeclared_classes_astro_silent_without_css.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "linter": { "enabled": true },
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.astro`

```astro
---
const title = "Hello";
---

<div class:list={["whatever"]}>Content</div>
<div class={"anything"}>Content</div>
<div class="something">Content</div>

```

# Emitted Messages

```block
Checked 2 files in <TIME>. No fixes applied.
```
