crates/biome_cli/tests/snapshots/main_cases_handle_astro_files/no_unused_imports_is_not_triggered_in_snippet_sources.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.astro`

```astro
---
import Component from "./Component.vue"
---

<Component />

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
