crates/biome_cli/tests/snapshots/main_cases_handle_astro_files/no_unused_variables_in_astro_attribute_expressions.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.astro`

```astro
---
const handler = () => {};
const dynamicId = "foo";
const dynamicClass = "bar";
const label = "Click me";
const pageTitle = "Home";
const sectionId = "main";
const dataTheme = "dark";
const items = ["a", "b", "c"];
const showList = true;
---

<html>
    <head><title>{pageTitle}</title></head>
    <body>
        <button onclick={handler} id={dynamicId} class={dynamicClass} aria-label={label}>Click</button>
        <section id={sectionId} data-theme={dataTheme}>
            <div set:html={items.map(i => `<li>${i}</li>`).join("")} />
            <span set:text={showList ? label : "hidden"} />
        </section>
    </body>
</html>

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
