crates/biome_cli/tests/snapshots/main_cases_handle_astro_files/no_unused_variables_in_astro_directive_expressions.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.astro`

```astro
---
const classes = ["a", "b"];
const greeting = "hello";
const rawHtml = "<strong>bold</strong>";
const textColor = "red";
const visibilityOpts = { rootMargin: "200px" };
const idleOpts = { timeout: 500 };
---

<div class:list={classes}>Content</div>
<p set:text={greeting} />
<article set:html={rawHtml} />
<style define:vars={{ textColor }}>
  h1 { color: var(--textColor); }
</style>
<Component client:visible={visibilityOpts} />
<Component client:idle={idleOpts} />

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
